--- a/Error Page/page.css
+++ b/Error Page/page.css
@@ -31,8 +31,13 @@
 
 /* Wrapper2 */
 .wrapper2 {width: 100%; height: 60vh; background-image: url('./test.jpg');background-attachment: fixed; background-size: cover; background-position: center; background-repeat: no-repeat;}
-.black {width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.6); color: rgba(0, 0, 0, 1); display: flex;}
-.black h1 {margin: auto; text-align: center;}
+.black {width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.6); color: rgba(0, 0, 0, 1);display: flex; }
+.black h1 {margin: auto; text-align: center;font-size: 50px;}
+.black button{color: black;padding: 10px 15px; border: 1.5px solid white; text-decoration: none; border-radius: 15px; transition: .4s;}
+.black button:hover {background-color: white;color:#086972; font-weight: bold;}
+
+.middle {margin: auto;}
+.butGone{display: none;}
 
 /* Wrapper3 */
 .wrapper3 {width: 100%;height: 60vh;background-image: linear-gradient(to bottom right, #071a52,#086972); display: flex;}
